feat: tracing repl auction progress
