# docs/swagger.json
@@ -13,42 +13,6 @@
     "host": "localhost:7001",
     "basePath": "/api/v1",
     "paths": {
-        "/deal-proposal-create-event-tracing": {
-            "post": {
-                "description": "deal-proposal-create's event manual job api",
-                "consumes": [
-                    "application/json",
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json",
-                    "application/json"
-                ],
-                "tags": [
-                    "Inner|Manual"
-                ],
-                "parameters": [
-                    {
-                        "type": "integer",
-                        "name": "from",
-                        "in": "query"
-                    },
-                    {
-                        "type": "integer",
-                        "name": "to",
-                        "in": "query"
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "type": "integer"
-                        }
-                    }
-                }
-            }
-        },
         "/deal-proposal-create-event-tracing-cron": {
             "post": {
                 "description": "deal-proposal-create's event cron job api, call by dolphin scheduler",
@@ -127,9 +91,9 @@
                 }
             }
         },
-        "/wfil-event-tracing": {
+        "/repl-auction-event-tracing-cron": {
             "post": {
-                "description": "wfil's event manual job api",
+                "description": "replAuction's event cron job api, call by dolphin scheduler",
                 "consumes": [
                     "application/json",
                     "application/json"
@@ -139,19 +103,31 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Inner|Manual"
+                    "Inner|Cron"
                 ],
-                "parameters": [
-                    {
-                        "type": "integer",
-                        "name": "from",
-                        "in": "query"
-                    },
-                    {
-                        "type": "integer",
-                        "name": "to",
-                        "in": "query"
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "integer"
+                        }
                     }
+                }
+            }
+        },
+        "/repl-event-tracing-cron": {
+            "post": {
+                "description": "repl's event cron job api, call by dolphin scheduler",
+                "consumes": [
+                    "application/json",
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json",
+                    "application/json"
+                ],
+                "tags": [
+                    "Inner|Cron"
                 ],
                 "responses": {
                     "200": {
